<resources>
    <string name="app_name">SafeWatchApp</string>
    <string name="user_selection_label">Выберите устройство</string>
    <string name="button_next">Далее</string>
    <string name="child">Ребёнок</string>
    <string name="parent">Родитель</string>
    <string name="email">Почта*</string>
    <string name="password">Пароль*</string>
    <string name="confirm_password">Подтверждение пароля*</string>
    <string name="welcome_back">С возвращением!</string>
    <string name="login">Войти</string>
    <string name="name">Имя*</string>
    <string name="email_hint">Введите вашу почту</string>
    <string name="password_hint">Пароль</string>
    <string name="password_repeat_hint">Повторите пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="registration">Регистрация</string>
    <string name="registation_title">Регистрация</string>
    <string name="name_hint">Введите имя</string>
    <string name="confirmation_of_policy_rules">Я подтверждаю правила <a href="policy_rules">Политики конфиденциальности</a></string>
    <string name="register">Зарегистрироваться</string>
    <string name="recovery_password">Восстановление пароля</string>
    <string name="recover">Восстановить</string>
    <string name="child_card_description">Выбор ребенка</string>
    <string name="parent_card_description">Выбор родителя</string>
    <string name="error_empty">Поле не может быть пустым</string>
    <string name="error_invalid_email">Некорректный формат почты</string>
    <string name="error_short_password">Размер пароля должен быть не менее 6 символов</string>
    <string name="error_name_too_short">Размер имени должен быть не менее 2 символов</string>
    <string name="error_user_not_found">Пользователь не найден</string>
    <string name="error_invalid_password">Некорректный пароль</string>
    <string name="error_passwords_do_not_match">Пароли не совпадают</string>
    <string name="device_verification">Устройства</string>
    <string name="back_button_description">Назад</string>
    <string name="new_devices">Новые устройства</string>
    <string name="added_devices">Связанные устройства</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отменить</string>
    <string name="date">Дата</string>
    <string name="default_name">Имя Ребенка</string>
    <string name="next_child">Next child</string>
    <string name="previous_child">Previous child</string>
    <string name="instruction">1. Установите это приложение на устройство ребенка.\n2. Выберите в меню \'Ребенок\'.\n3. Залогиньтесь под своими данными.\n4. Перейдите в Устройства. \n5. Подтвердите устройство ребенка</string>
    <string name="instruction_title">Чтобы добавить устройство, следуйте инструкциям в приложении.</string>
    <string name="notice_before_instruction">У вас не добавлено ниодного устройство ребенка</string>
    <string name="open_menu">Open menu</string>
    <string name="child_name">Имя</string>
    <string name="notifications">Уведомления</string>
    <string name="title">Заголовок</string>
    <string name="message">Сообщение</string>
    <string name="edit_child_name">Редактировать имя ребенка</string>
    <string name="save">Сохранить</string>
    <string name="error_empty_name">Имя не может быть пустым</string>
    <string name="no_notifications">Нет уведомлений</string>
    <string name="select_profile">Выберите профиль</string>
    <string name="add_new_profile">Создать новый профиль</string>
    <string name="no_profiles_found">Профили не найдены. Пожалуйста, добавьте новый профиль.</string>
    <string name="child_photo">Фото ребенка</string>
    <string name="remindme">Запомнить меня</string>
    <string name="change_image">Изменить изображение</string>
    <string name="settings">Настройки</string>
    <string name="help">Помощь</string>
    <string name="exit">Выход</string>
    <string name="no_new_devices">Нет новых устройств</string>
    <string name="currently_no_devices_awaiting_approval">На данный момент нет устройств, ожидающих подтверждения</string>
    <string name="no_devices_added">Нет добавленных устройств</string>
    <string name="currently_no_associated_devices">На данный момент нет связаных устройств</string>
    <string name="error_name_too_long">Имя не должно превышать 14 символов</string>
    <string name="error_name_contains_digits">Имя не должно содержать цифры</string>
    <string name="error_name_multiple_words">Имя должно состоять из одного слова</string>
    <string name="error_name_invalid_characters">Имя может содержать только буквы</string>
    <string name="approve">Подтвердить</string>
    <string name="decline">Отменить</string>
    <string name="application_filter">Фильтр приложений</string>
    <string name="search_for_applications">Поиск приложений</string>
    <string name="ok_btn">ОК</string>
    <string name="cancel_btn">Отмена</string>
    <string name="creating_child_profile_btn">Создание профиля ребенка</string>
    <string name="avatar_child">Аватар ребенка</string>
</resources>