<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B3000000"
        android:gravity="center">


    <!-- Фотография в центре -->
    <ImageView
        android:id="@+id/childPhotoDialogImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/child_photo"
        android:layout_centerInParent="true" />

    <!-- Кнопка Изменить изображение -->
    <Button
        android:id="@+id/changePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/childPhotoDialogImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/change_image"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/confirmChangePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/childPhotoDialogImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/blue_main"
        android:text="@string/confirm"
        android:textColor="@android:color/white" />
</RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>