<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryBackgroundBlue">

    <!-- Toolbar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="48dp"
            android:layout_height="58dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/open_menu"
                android:src="@drawable/back_button"
                android:scaleType="centerInside"
                android:padding="12dp"
                app:tint="@color/primaryTextBlue"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_verification"
            android:textAlignment="center"
            android:textColor="@color/primaryTextBlue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:cardCornerRadius="10dp"
        app:tint="@color/red"
        app:cardElevation="2dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/primaryTextBlue"
            app:tabIndicatorHeight="3dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/primaryTextBlue"
            app:tabTextColor="@color/black">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_devices" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added_devices" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- ViewPager for Tabs -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>