<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundBlue"
    tools:context=".screen.ChooseUserActivity">

    <!-- Основная карточка-контейнер -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/lightBackgroundBlue"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp">

            <TextView
                android:id="@+id/labelUserSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/user_selection_label"
                android:textAlignment="center"
                android:textColor="@color/primaryTextBlue"
                android:textSize="28sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/labelUserSelection"
                app:layout_constraintStart_toStartOf="@+id/labelUserSelection"
                app:layout_constraintTop_toBottomOf="@+id/labelUserSelection">

                <!-- Карточка для "Ребенок" -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardChild"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/child_card_description"
                    android:focusable="true"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="15dp"
                    app:strokeColor="@android:color/transparent"
                    app:strokeWidth="8dp">

                    <ImageView
                        android:id="@+id/imgChild"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/child"
                        android:scaleType="centerCrop"
                        android:src="@drawable/boy" />
                </com.google.android.material.card.MaterialCardView>

                <!-- Карточка для "Родитель" -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardParent"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/parent_card_description"
                    android:focusable="true"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="15dp"
                    app:strokeColor="@android:color/transparent"
                    app:strokeWidth="8dp">

                    <ImageView
                        android:id="@+id/imgParent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/woman" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <!-- Кнопка "Далее" -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/primaryButtonBlue"
                android:text="@string/button_next"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/labelUserSelection"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="@+id/labelUserSelection"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintVertical_bias="0.253" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>